--- a/nosolosoft/pom.xml
+++ b/nosolosoft/pom.xml
@@ -16,10 +16,15 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<start-class>com.prueba.nosolosoft.NosolosoftApplication</start-class>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-actuator</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -61,13 +66,11 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
